[project]
name = "yadu"
version = "0.0.1"
authors = [
  { name="Nikshet", email="nikshetsteh@gmail.com" },
]
description = "Yandex Alice Dialogs Utility"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]